Fixed Header Spacing

--- a/app/scss/_style.scss
+++ b/app/scss/_style.scss
@@ -1311,7 +1311,7 @@ g {
 #content {
   margin: 15px auto;
   padding: 0 2em;
-  margin-top: 15px;
+  margin-top: 25px;
   user-select: none;
 }
 
@@ -1335,8 +1335,8 @@ g {
 
 .stores {
   display: block;
-  // 90px margin to make room for the fixed header
-  margin-top: 90px;
+  // 100px margin to make room for the fixed header
+  margin-top: 100px;
 }
 
 .store-bounds {
